[gd_scene load_steps=4 format=3 uid="uid://crnfud1x8yvea"]

[ext_resource type="Theme" uid="uid://dskhb6bratu4n" path="res://themes/default_theme.tres" id="1_wn6mc"]
[ext_resource type="Script" path="res://scripts/interval_identification/IntervalQuiz.gd" id="2_gcgwo"]
[ext_resource type="Script" path="res://scripts/interval_identification/Quiz.gd" id="3_ff16k"]

[node name="IntervalIdentification" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
offset_top = 69.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ConfigPage" type="Node2D" parent="."]

[node name="Title" type="RichTextLabel" parent="ConfigPage"]
offset_left = 11.0
offset_top = 79.0
offset_right = 1145.0
offset_bottom = 137.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 0
bbcode_enabled = true
text = "[center]Interval Identification Quiz[/center]"
metadata/_edit_use_anchors_ = true

[node name="Description" type="RichTextLabel" parent="ConfigPage"]
offset_left = 331.0
offset_top = 135.0
offset_right = 844.0
offset_bottom = 269.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
text = "You will hear 2 notes. Your goal is to identify the difference between these 2 notes."
metadata/_edit_use_anchors_ = true

[node name="IntervalsLabel" type="RichTextLabel" parent="ConfigPage"]
offset_left = 94.0
offset_top = 244.0
offset_right = 323.0
offset_bottom = 277.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
text = "Intervals"
metadata/_edit_use_anchors_ = true

[node name="IntervalSelector" type="OptionButton" parent="ConfigPage"]
offset_left = 321.0
offset_top = 237.0
offset_right = 861.0
offset_bottom = 276.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
item_count = 3
selected = 0
popup/item_0/text = "Simple (P1, M3, P5, Octave)"
popup/item_0/id = 0
popup/item_1/text = "Diatonic (P1, M2, M3, P4, P5, M6, M7, Octave)"
popup/item_1/id = 1
popup/item_2/text = "All"
popup/item_2/id = 2
metadata/_edit_use_anchors_ = true

[node name="QuestionsLabel" type="RichTextLabel" parent="ConfigPage"]
offset_left = 93.0
offset_top = 283.0
offset_right = 322.0
offset_bottom = 319.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
text = "Questions"
metadata/_edit_use_anchors_ = true

[node name="QuestionSelector" type="SpinBox" parent="ConfigPage"]
offset_left = 322.0
offset_top = 288.0
offset_right = 405.063
offset_bottom = 319.0
theme = ExtResource("1_wn6mc")
metadata/_edit_use_anchors_ = true

[node name="QuestionsInfo" type="RichTextLabel" parent="ConfigPage"]
offset_left = 401.0
offset_top = 291.0
offset_right = 635.0
offset_bottom = 317.0
theme = ExtResource("1_wn6mc")
theme_override_colors/default_color = Color(0.344076, 0.344076, 0.344076, 1)
theme_override_font_sizes/normal_font_size = 15
text = "Leave as 0 for infinite questions"
metadata/_edit_use_anchors_ = true

[node name="FixedRootLabel" type="RichTextLabel" parent="ConfigPage"]
offset_left = 94.0
offset_top = 321.0
offset_right = 323.0
offset_bottom = 353.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
text = "Fixed Root"
metadata/_edit_use_anchors_ = true

[node name="FixedRootSelector" type="CheckBox" parent="ConfigPage"]
offset_left = 323.0
offset_top = 325.0
offset_right = 347.0
offset_bottom = 349.0
metadata/_edit_use_anchors_ = true

[node name="OrderLabel" type="RichTextLabel" parent="ConfigPage"]
offset_left = 94.0
offset_top = 357.0
offset_right = 323.0
offset_bottom = 388.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
text = "Order"
metadata/_edit_use_anchors_ = true

[node name="OrderSelector" type="OptionButton" parent="ConfigPage"]
offset_left = 325.0
offset_top = 357.0
offset_right = 649.0
offset_bottom = 396.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
item_count = 3
selected = 0
popup/item_0/text = "Asending"
popup/item_0/id = 0
popup/item_1/text = "Desending"
popup/item_1/id = 1
popup/item_2/text = "Harmonic (Simultaneous)"
popup/item_2/id = 2
metadata/_edit_use_anchors_ = true

[node name="Hotkeys Info" type="RichTextLabel" parent="ConfigPage"]
visible = false
offset_left = 313.0
offset_top = 433.0
offset_right = 846.0
offset_bottom = 459.0
theme = ExtResource("1_wn6mc")
theme_override_colors/default_color = Color(0.344076, 0.344076, 0.344076, 1)
theme_override_font_sizes/normal_font_size = 15
text = "Hotkeys to quickly select answers are shown in [ ] next to each option."
metadata/_edit_use_anchors_ = true

[node name="StartIntervalQuiz" type="Button" parent="ConfigPage"]
offset_left = 430.0
offset_top = 493.0
offset_right = 715.0
offset_bottom = 588.0
theme = ExtResource("1_wn6mc")
text = "Start Quiz"

[node name="Quiz" type="Node2D" parent="."]
visible = false
script = ExtResource("2_gcgwo")

[node name="QuizClass" type="Node" parent="Quiz"]
script = ExtResource("3_ff16k")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="Quiz"]
volume_db = 10.0

[node name="AudioPlayer2" type="AudioStreamPlayer" parent="Quiz"]
volume_db = 10.0

[node name="Title" type="RichTextLabel" parent="Quiz"]
offset_left = 11.0
offset_top = 79.0
offset_right = 1145.0
offset_bottom = 137.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 0
bbcode_enabled = true
text = "[center]Interval Identification Quiz[/center]"
metadata/_edit_use_anchors_ = true

[node name="Score" type="RichTextLabel" parent="Quiz"]
offset_left = 2.0
offset_top = 133.0
offset_right = 1152.0
offset_bottom = 169.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center][x] of [y] correct[/center]"

[node name="Streak" type="RichTextLabel" parent="Quiz"]
offset_left = 2.0
offset_top = 163.0
offset_right = 1152.0
offset_bottom = 199.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Streak of [z] correct[/center]"

[node name="HearQuestion" type="Button" parent="Quiz"]
offset_left = 378.0
offset_top = 217.0
offset_right = 779.0
offset_bottom = 274.0
theme = ExtResource("1_wn6mc")
text = "Hear Question"

[node name="CorrectLabel" type="RichTextLabel" parent="Quiz"]
visible = false
offset_top = 284.0
offset_right = 1152.0
offset_bottom = 315.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Correct![/center]"

[node name="IncorrectLabel" type="RichTextLabel" parent="Quiz"]
visible = false
offset_top = 284.0
offset_right = 1152.0
offset_bottom = 315.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Incorrect[/center]"

[node name="SelectButtons" type="Control" parent="Quiz"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="P1" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 187.0
offset_top = 338.0
offset_right = 283.0
offset_bottom = 377.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Unison"

[node name="m2" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 293.0
offset_top = 338.0
offset_right = 427.0
offset_bottom = 377.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Minor 2nd"

[node name="Maj2" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 435.0
offset_top = 338.0
offset_right = 569.0
offset_bottom = 377.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Major 2nd"

[node name="m3" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 580.0
offset_top = 338.0
offset_right = 714.0
offset_bottom = 377.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Minor 3rd"

[node name="Maj3" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 727.0
offset_top = 338.0
offset_right = 861.0
offset_bottom = 377.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Major 3rd"

[node name="P4" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 874.0
offset_top = 338.0
offset_right = 1011.0
offset_bottom = 377.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Perfect 4th"

[node name="TT" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 169.0
offset_top = 386.0
offset_right = 303.0
offset_bottom = 425.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Tritone"

[node name="P5" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 311.0
offset_top = 386.0
offset_right = 462.0
offset_bottom = 425.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Perfect Fifth
"

[node name="m6" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 473.0
offset_top = 386.0
offset_right = 607.0
offset_bottom = 425.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Minor 6th"

[node name="Maj6" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 613.0
offset_top = 386.0
offset_right = 747.0
offset_bottom = 425.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Major 6th"

[node name="m7" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 755.0
offset_top = 386.0
offset_right = 889.0
offset_bottom = 425.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Minor 7th"

[node name="Maj7" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 896.0
offset_top = 386.0
offset_right = 1030.0
offset_bottom = 425.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Major 7th"

[node name="P8" type="Button" parent="Quiz/SelectButtons"]
layout_mode = 0
offset_left = 506.0
offset_top = 432.0
offset_right = 640.0
offset_bottom = 471.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Octave"

[node name="EndQuiz" type="Button" parent="Quiz"]
offset_left = 519.0
offset_top = 578.0
offset_right = 636.0
offset_bottom = 635.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/font_size = 25
text = "End Quiz"

[node name="EndPage" type="Node2D" parent="."]
visible = false

[node name="Title" type="RichTextLabel" parent="EndPage"]
offset_left = 11.0
offset_top = 79.0
offset_right = 1145.0
offset_bottom = 137.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 0
bbcode_enabled = true
text = "[center]Interval Identification Quiz[/center]"
metadata/_edit_use_anchors_ = true

[node name="Subtitle" type="RichTextLabel" parent="EndPage"]
offset_left = 11.0
offset_top = 134.0
offset_right = 1145.0
offset_bottom = 192.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Finished![/center]"
metadata/_edit_use_anchors_ = true

[node name="Score" type="RichTextLabel" parent="EndPage"]
offset_left = 11.0
offset_top = 168.0
offset_right = 1145.0
offset_bottom = 226.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]You successfully identified x of y correctly, or z%[/center]"
metadata/_edit_use_anchors_ = true

[node name="Highest Streak" type="RichTextLabel" parent="EndPage"]
offset_left = 11.0
offset_top = 204.0
offset_right = 1145.0
offset_bottom = 262.0
theme = ExtResource("1_wn6mc")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Highest Streak: x[/center]"
metadata/_edit_use_anchors_ = true

[node name="RestartButton" type="Button" parent="EndPage"]
offset_left = 467.0
offset_top = 498.0
offset_right = 662.0
offset_bottom = 554.0
theme = ExtResource("1_wn6mc")
text = "Play Again"

[connection signal="pressed" from="ConfigPage/StartIntervalQuiz" to="Quiz" method="_on_start_interval_quiz_pressed"]
[connection signal="pressed" from="Quiz/HearQuestion" to="Quiz" method="_on_hear_question_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/P1" to="Quiz" method="_on_p_1_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/m2" to="Quiz" method="_on_m_2_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/Maj2" to="Quiz" method="_on_maj_2_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/m3" to="Quiz" method="_on_m_3_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/Maj3" to="Quiz" method="_on_maj_3_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/P4" to="Quiz" method="_on_p_4_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/TT" to="Quiz" method="_on_tt_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/P5" to="Quiz" method="_on_p_5_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/m6" to="Quiz" method="_on_m_6_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/Maj6" to="Quiz" method="_on_maj_6_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/m7" to="Quiz" method="_on_m_7_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/Maj7" to="Quiz" method="_on_maj_7_pressed"]
[connection signal="pressed" from="Quiz/SelectButtons/P8" to="Quiz" method="_on_p_8_pressed"]
[connection signal="pressed" from="Quiz/EndQuiz" to="Quiz" method="_on_end_quiz_pressed"]
[connection signal="pressed" from="EndPage/RestartButton" to="Quiz" method="_on_restart_button_pressed"]
